--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,7 @@
 $violet: #000;
 $yellow: #F9C802;
 $bigStone: #171F3F;
+$catskillWhite: #F5F7FA;
+$shuttleGray: #52606D;
+$azureRadiance: #0593FB;
+$malachite: #06C847;
