--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap&subset=latin-ext');
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
@@ -21,26 +22,108 @@ body {
 .whiteSection {
     background: $catskillWhite;
     margin: 16px;
-    padding-left: 128px;
     padding-top: 128px;
 }
 
 .header {
-    max-width: 780px;
+    max-width: 1184px;
+    margin: 0 auto;
     &__photo {
         width: 120px;
         height: 120px;
     }
     &__title {
+        max-width: 780px;
         font-weight: 600;
-        font-size: 40px;
-        line-height: 56px;
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+        margin: 2rem 0 1rem;
+        font-style: normal;
     }
     &__desc {
         color: $shuttleGray;
         font-weight: 300;
-        font-size: 20px;
-        line-height: 36px;
+        font-size: 1.25rem;
+        font-style: normal;
+        line-height: 2.25rem;
+        margin-bottom: 3.75rem;
+        -webkit-font-smoothing: antialiased;
     }
-    &email {}
+    &__link {
+        color: $azureRadiance;
+        font-weight: 500;
+    }
+    &__email {
+        color: $azureRadiance;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.25rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid $azureRadiance;
+    }
+}
+
+.skills {
+    max-width: 1184px;
+    margin: 0 auto;
+    margin-top: 200px;
+    &__header {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 3rem;
+        padding: 1rem 0;
+        border-bottom: 2px solid #E5E8E0;
+    }
+}
+
+.skill {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 8rem 0;
+    &__header {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 2rem;
+        line-height: 44px;
+        margin: 0;
+        &::before {
+            content: '';
+            display: block;
+            width: 80px;
+            height: 4px;
+            background: $malachite;
+            border-radius: 8px;
+            margin-bottom: 1.5rem;
+        }
+    }
+    &__list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        list-style: none;
+        padding: 0;
+        margin-top: calc(1.5rem + 4px);
+        column-gap: 1.5rem;
+    }
+    &__listItem {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 40px;
+        color: $shuttleGray;
+        padding-left: 30px;
+        position: relative;
+        &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 18px;
+            height: 18px;
+            top: 10px;
+            left: 0;
+            background: url(../assets/img/greenTick.svg);
+            mask-repeat: no-repeat;
+        }
+    }
 }
