--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,5 @@ $catskillWhite: #F5F7FA;
 $shuttleGray: #52606D;
 $azureRadiance: #0593FB;
 $malachite: #06C847;
+$royalPurple: #653CAD;
+$mariner: #2251CC;
